@@ -1,5 +1,14 @@
 2014-11-17  Jan Hubicka  <hubicka@ucw.cz>
 
+	* ipa-cp.c (ipa_get_indirect_edge_target_1): Handle speculation.
+	(ipa_get_indirect_edge_target): Add SPECULATIVE argument.
+	(devirtualization_time_bonus): Use it.
+	(ipcp_discover_new_direct_edges): Likewise.
+	* ipa-inline-analysis.c (estimate_edge_devirt_benefit): Update.
+	* ipa-prop.h (ipa_get_indirect_edge_target): Update prototype.
+
+2014-11-17  Jan Hubicka  <hubicka@ucw.cz>
+
 	* tree.c (free_lang_data_in_decl): Set DECL_FUNCTION_SPECIFIC_OPTIMIZATION
 	to optimization_default_node.
 
